# glzip

./: .gitignore  Cargo.toml  rustfmt.toml
src/: csr.rs  decoder.rs  edge.rs  encoder.rs  error.rs  graph_sage_sampler.rs  iter.rs  lib.rs  par.rs  reorder.rs  slice.rs  vec.rs
src/csr/: mod.rs  par.rs  seq.rs
src/cuda/: csr.cu  decoder.cuh
src/io/: csv.rs  mod.rs
