[package]
name = "glzip_core"
version = "0.1.0"
edition = "2021"

[dependencies]
rayon = "1.5.1"
num_cpus = "1.13.1"
ndarray-npy = { version = "0.8.1", default-features = false, optional = true }
ndarray = { version = "0.15.4", optional = true }
memmap2 = { version = "0.5.3", optional = true }
flate2 = { version = "1.0.22", optional = true }

[features]
npy = ["ndarray-npy", "ndarray", "memmap2"]
csv = ["flate2"]
